fix: files in notification service